# LamportsFactory

./: .gitignore  .gitmodules  README-ja.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ghcr.yml
docker/: Dockerfile  build.latex.yml  build.typst.yml  dev.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nvim-latex-bootstrap.sh  test.sh  tmux.conf
docker/runtime/: build-server-in-container.sh  entrypoint.sh  nvim-bootstrap.sh
docker/workspace/latex/sample-2/: main-2.tex  main.tex
docker/workspace/sample/: main.tex
docker/workspace/typst/sample/: main.typ
server/: CMakeLists.txt
server/public/: client.js  index.html  styles.css
server/public/app/: api.js  file_tree.js  layout.js  pdf_preview.js  reload_channel.js  state.js  status.js  url.js
server/public/pdf/: pdf_renderer.js  pdf_toolbar.js  pdf_viewer.js
server/src/: main.cpp  version.h
server/src/app/: build_log_buffer.cpp  build_log_buffer.hpp  build_manager.cpp  build_manager.hpp  config.cpp  config.hpp  event_bus.cpp  event_bus.hpp  file_watcher.cpp  file_watcher.hpp  process.cpp  process.hpp  utils.cpp  utils.hpp
server/src/app/common/: encoding.cpp  glob.cpp  path_utils.cpp  time_utils.cpp  utils.cpp  utils.hpp
server/src/app/compiler/: compiler_backend.hpp  compiler_backend_factory.cpp  compiler_backend_factory.hpp  latex_backend.cpp  latex_backend.hpp  typst_backend.cpp  typst_backend.hpp
server/src/app/config/: config.cpp  config.hpp
server/src/app/events/: event_bus.cpp  event_bus.hpp
server/src/app/http/: api_payloads.cpp  api_payloads.hpp  response.cpp  response.hpp  server_handle.cpp  server_handle.hpp
server/src/app/process/: process.cpp  process.hpp
server/src/app/watch/: file_watcher.cpp  file_watcher.hpp
server/src/app/workspace/: workspace_documents.cpp  workspace_documents.hpp
server/tests/: unit_tests.cpp
workspace/tex/: main.tex  sample.tex
